k8s/04-timeouts/color-timeout-istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: color-timeout
  namespace: faces
spec:
  parentRefs:
    - name: color
      kind: Service
      group: core
      port: 80
  rules:
  - backendRefs:
    - name: color
      port: 80
    timeouts:
      request: 300ms
