k8s/04-timeouts/face-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: face-route
  namespace: faces
spec:
  parentRefs:
    - name: ingress
      namespace: default
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /face/
    backendRefs:
    - name: face
      port: 80
    timeouts:
      request: 200ms
