k8s/04-timeouts/smiley-timeout-istio.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: smiley-timeout
  namespace: faces
spec:
  parentRefs:
    - name: smiley
      kind: Service
      group: ""
      port: 80
  rules:
    - backendRefs:
        - name: smiley
          port: 80
      timeouts:
        request: 300ms
