k8s/04-timeouts/smiley-timeout-linkerd.yaml
apiVersion: policy.linkerd.io/v1beta3
kind: HTTPRoute
metadata:
  name: smiley-timeout
  namespace: faces
spec:
  parentRefs:
    - name: smiley
      kind: Service
      group: core
      port: 80
  rules:
  - backendRefs:
    - name: smiley
      port: 80
    timeouts:
      request: 300ms
